--- a/style/style.css
+++ b/style/style.css
@@ -36,13 +36,12 @@ body {
 }
 
 .search-container input {
-    width: 100px;
     font-size: 25px;
     background-color: transparent;
     border: none;
     color: white;
-    padding-left: 20px;
-    padding-right: 250px;
+    width: 100%;
+    padding-left: 10px;
 }
 
 .search-container .search {
@@ -70,4 +69,18 @@ body {
     top: 320px;
     border-radius: 30px;
     bottom: 0;
+}
+
+.store-container {
+    margin-left: 30px;
+    font-size: 20px;
+    margin-right: 30px;
+    line-height: 1;
+    margin-top: 30px;
+}
+
+.store-phone-number {
+    font-size: 15px;
+    color: #B5ADAD;
+    border-bottom: solid 1px;
 }
