--- a/style/style.css
+++ b/style/style.css
@@ -69,18 +69,58 @@ body {
     top: 320px;
     border-radius: 30px;
     bottom: 0;
+    display: flex;
+    overflow: hidden;
+    padding-bottom: 30px;
 }
 
+
 .store-container {
-    margin-left: 30px;
-    font-size: 20px;
-    margin-right: 30px;
-    line-height: 1;
+    border-bottom: 1px solid #979797;
+    display: flex;
+}
+
+.store-address {
+    font-size: 21px;
+    color: #514c4c;
     margin-top: 30px;
 }
 
 .store-phone-number {
-    font-size: 15px;
-    color: #B5ADAD;
-    border-bottom: solid 1px;
+    color: #b5adad;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.store-container span {
+    display: block;
+}
+
+.store-number {
+    width: 30px;
+    height: 30px;
+    background-color: #454e53;
+    color: #b5adad;
+    border-radius: 50%;
+    font-size: 12px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.store-info-container {
+    flex-grow: 1;
+}
+
+.store-number-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stores-list {
+    flex-grow: 1;
+    overflow-y: scroll;
+    padding-left: 20px;
+    padding-right: 20px;
 }
