--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,7 @@ body {
 .store-container {
     border-bottom: 1px solid #979797;
     display: flex;
+    cursor: pointer;
 }
 
 .store-address {
@@ -123,4 +124,59 @@ body {
     overflow-y: scroll;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.store-info-window {
+    min-width: 300px;
+    font-size: 18px;
+    padding: 8px;
+    z-index: 101;
+}
+
+.store-info-name {
+    font-size: 24px;
+    font-weight: bold;
+    color: rgb(0,0,0,.87);
+}
+.store-info-status {
+    margin-top: 6px;
+    border-bottom: 1px solid #00000029;
+    padding-bottom: 6px;
+}
+.store-info-address, .store-info-phone {
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.store-info-address .circle, .store-info-phone .circle {
+    width: 30px;
+    height: 30px;
+    background-color: #1985a1;
+    color: white;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-right: 8px;
+}
+
+.search i {
+    cursor: pointer;
+}
+
+.store-container-background {
+    display: flex;
+    flex-grow: 1;
+    border-radius: 12px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    transition: all 0.2s ease-in-out;
+}
+
+.store-container-background:hover {
+    background-color: #ccc;
+
 }
